Update motd template

--- a/roles/motd/files/motd.j2
+++ b/roles/motd/files/motd.j2
@@ -1,9 +1,8 @@
 -----------------------------
-Clearmatics Server
 Hostname: {{ ansible_hostname }}
 IP address  : {{ ansible_default_ipv4.address }}
 
 This server is managed by Ansible. 
 Do not edit configuration files directly.
-Maintainers: ops@clearmatics.com
+Maintainers: george@shapeshed.com
 -----------------------------
